91 auth cli register staff (#127)
* Updated authentication service register staff API + implemented auth-cli register staff

* fixing unit test
